@@ -1,3 +1,14 @@
+2021-04-22  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GTK] Build error: Couldn't find include 'Soup-2.4.gir'
+        https://bugs.webkit.org/show_bug.cgi?id=224926
+
+        Reviewed by Philippe Normand.
+
+        Use the right soup API version when generating the introspection.
+
+        * PlatformGTK.cmake:
+
 2021-04-22  Myles C. Maxfield  <mmaxfield@apple.com>
 
         [iOS] Web processes recreated after crashing are not created with the right contentSizeCategory
